<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooseActivity">

    <TextView
        android:id="@+id/chooseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/chooseTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pass1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="startPass"
        android:text="@string/pass1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pass4"
        app:layout_constraintEnd_toStartOf="@+id/pass2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTitle" />

    <Button
        android:id="@+id/pass2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass2"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass1"
        app:layout_constraintEnd_toStartOf="@+id/pass3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass1" />

    <Button
        android:id="@+id/pass3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass3"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass2" />

    <Button
        android:id="@+id/pass4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="startPass"
        android:text="@string/pass4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pass7"
        app:layout_constraintEnd_toStartOf="@+id/pass5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1" />

    <Button
        android:id="@+id/pass5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass5"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass4"
        app:layout_constraintEnd_toStartOf="@+id/pass6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass4" />

    <Button
        android:id="@+id/pass6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass6"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass5" />

    <Button
        android:id="@+id/pass7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="startPass"
        android:text="@string/pass7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pass10"
        app:layout_constraintEnd_toStartOf="@+id/pass8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass4" />

    <Button
        android:id="@+id/pass8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass8"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass7"
        app:layout_constraintEnd_toStartOf="@+id/pass9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass7" />

    <Button
        android:id="@+id/pass9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass9"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass8" />

    <Button
        android:id="@+id/pass10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="8dp"
        android:onClick="startPass"
        android:text="@string/pass10"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pass11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass7" />

    <Button
        android:id="@+id/pass11"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass11"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass10"
        app:layout_constraintEnd_toStartOf="@+id/pass12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass10" />

    <Button
        android:id="@+id/pass12"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="startPass"
        android:text="@string/pass12"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass11" />
</android.support.constraint.ConstraintLayout>